Bluetooth latency 2.conf

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,4 +16,6 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # CONFIG_ZMK_USB_LOGGING=y
 
 # Improve input lag, latency?
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y 
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y #still laggy so lets use higher value
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_16=y
